tests/regression/errors/basic/syntax_error_17.csd
// Syntax error test 17 - missing semicolon
sus x drip = 17
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
